{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 51,
  "lineage": "b5b17a0d-13d4-66b9-716e-75ea56fe5efd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08dc7c17aefca5580",
            "domain": "vpc",
            "id": "eipalloc-08dc7c17aefca5580",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-127-165-170.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.165.170",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020120908695:internet-gateway/igw-03110c266d5b9b819",
            "id": "igw-03110c266d5b9b819",
            "owner_id": "020120908695",
            "vpc_id": "vpc-06da432dc1a584dfd"
          },
          "dependencies": [
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08dc7c17aefca5580",
            "connectivity_type": "public",
            "id": "nat-003c8b7cb5034141f",
            "network_interface_id": "eni-09a585a8b223a0f88",
            "private_ip": "10.0.0.15",
            "public_ip": "13.127.165.170",
            "subnet_id": "subnet-098212a0cc66d1fb1"
          },
          "dependencies": [
            "aws_eip.this_eip",
            "aws_subnet.this_public_subnet",
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "this_pri_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a460dfa0112d8f021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-003c8b7cb5034141f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a460dfa0112d8f02",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this_eip",
            "aws_nat_gateway.this_nat_gateway",
            "aws_route_table.this_pri_route_table",
            "aws_subnet.this_public_subnet",
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "this_pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03110c266d5b9b819",
            "id": "r-rtb-0dc3473b9355694091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dc3473b935569409",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this_igw",
            "aws_route_table.this_pub_route_table",
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this_pri_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020120908695:route-table/rtb-0a460dfa0112d8f02",
            "id": "rtb-0a460dfa0112d8f02",
            "owner_id": "020120908695",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06da432dc1a584dfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this_pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020120908695:route-table/rtb-0dc3473b935569409",
            "id": "rtb-0dc3473b935569409",
            "owner_id": "020120908695",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06da432dc1a584dfd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this_private_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cff1b9dc1f962667",
            "route_table_id": "rtb-0a460dfa0112d8f02",
            "subnet_id": "subnet-05acec87b060b9b71"
          },
          "dependencies": [
            "aws_route_table.this_pri_route_table",
            "aws_subnet.this_private_subnet",
            "aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f29e962e1a5ff044",
            "route_table_id": "rtb-0a460dfa0112d8f02",
            "subnet_id": "subnet-038241e2dbef8097a"
          },
          "dependencies": [
            "aws_route_table.this_pri_route_table",
            "aws_subnet.this_private_subnet",
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this_public_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0367f3379d4817d1c",
            "route_table_id": "rtb-0dc3473b935569409",
            "subnet_id": "subnet-098212a0cc66d1fb1"
          },
          "dependencies": [
            "aws_route_table.this_pub_route_table",
            "aws_subnet.this_public_subnet",
            "aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045c5888cb3dd7bec",
            "route_table_id": "rtb-0dc3473b935569409",
            "subnet_id": "subnet-0408950c00204f46b"
          },
          "dependencies": [
            "aws_route_table.this_pub_route_table",
            "aws_subnet.this_public_subnet",
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020120908695:subnet/subnet-05acec87b060b9b71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05acec87b060b9b71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "020120908695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06da432dc1a584dfd"
          },
          "dependencies": [
            "aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020120908695:subnet/subnet-038241e2dbef8097a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038241e2dbef8097a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "020120908695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06da432dc1a584dfd"
          },
          "dependencies": [
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020120908695:subnet/subnet-098212a0cc66d1fb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098212a0cc66d1fb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "020120908695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06da432dc1a584dfd"
          },
          "dependencies": [
            "aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020120908695:subnet/subnet-0408950c00204f46b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0408950c00204f46b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "020120908695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06da432dc1a584dfd"
          },
          "dependencies": [
            "aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:020120908695:vpc/vpc-06da432dc1a584dfd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-004aca9099cc5585a",
            "default_route_table_id": "rtb-0d1c6a7855a053c09",
            "default_security_group_id": "sg-0ad97db74fe97acae",
            "dhcp_options_id": "dopt-097d18f5e4fa00a1f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06da432dc1a584dfd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1c6a7855a053c09",
            "owner_id": "020120908695"
          }
        }
      ]
    }
  ]
}